done with app, modal

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             <hr class="my-4">
             <p class="lead">Answer a few basic questions.</p>
             <p class="lead">Then find the friend with the greatest compatibility.</p>
-            <a id="start-survey" class="btn btn-primary btn-lg" href="/survey" role="button">Go to the Survey</a>
+            <a id="start-survey" class="btn btn-primary btn-lg" href="/surveyPage" role="button">Go to the Survey</a>
         </div>
     </div>
 
