--- a/public/survey.html
+++ b/public/survey.html
@@ -15,118 +15,120 @@
         <h1 id="survey-title">Survey Questions</h1>
         <hr class="my-4">
         <h2 id="about-you">About You</h2>
+        <h2 id="error-name" class="error-message">*Please enter your name*</h2>
         <form>
             <div class="form-group">
                 <label for="name">Name (Required)</label>
                 <input type="name" class="form-control" id="InputName" aria-describedby="emailHelp" placeholder="Enter name">
             </div>
             <div class="form-group">
-                <label for="photo">Link to Photo Image (Required)</label>
+                <label for="photo">Link to Photo Image</label>
                 <input type="link" class="form-control" id="InputPhoto" placeholder="Link to Photo">
             </div>
             <hr class="my-4">
+            <h2 id ="error-question" class="error-message">*Please answer all questions*</h2>
             <h3>Question 1</h3>
-            <h4>question</h4>
+            <h4>I like to get things done right away.</h4>
             <select name="options" id="q1">
-                <option value>select an option</option>
-                <option value="1">1 (never)</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5 (always)</option>
+                <option value=0>select an option</option>
+                <option value=1>1 (never)</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5 (always)</option>
             </select>
             <h3>Question 2</h3>
-            <h4>question</h4>
+            <h4>I respect other people's viewpoints.</h4>
             <select name="options" id="q2">
-                <option value>select an option</option>
-                <option value="1">1 (never)</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5 (always)</option>
+                <option value=0>select an option</option>
+                <option value=1>1 (never)</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5 (always)</option>
             </select>
             <h3>Question 3</h3>
-            <h4>question</h4>
+            <h4>I am not easily embarrassed by others.</h4>
             <select name="options" id="q3">
-                <option value>select an option</option>
-                <option value="1">1 (never)</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5 (always)</option>
+                <option value=0>select an option</option>
+                <option value=1>1 (never)</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5 (always)</option>
             </select>
             <h3>Question 4</h3>
-            <h4>question</h4>
+            <h4>I can admit it when I am wrong.</h4>
             <select name="options" id="q4">
-                <option value>select an option</option>
-                <option value="1">1 (never)</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5 (always)</option>
+                <option value=0>select an option</option>
+                <option value=1>1 (never)</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5 (always)</option>
             </select>
-            <!-- <h3>Question 5</h3>
-            <h4>question</h4>
+            <h3>Question 5</h3>
+            <h4>I trust reason rather than feelings.</h4>
             <select name="options" id="q5">
-                <option value>select an option</option>
-                <option value="1">1 (never)</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5 (always)</option>
+                <option value=0>select an option</option>
+                <option value=1>1 (never)</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5 (always)</option>
             </select>
             <h3>Question 6</h3>
-            <h4>question</h4>
+            <h4>The letter of the law is more important to me than the spirit of the law.</h4>
             <select name="options" id="q6">
-                <option value>select an option</option>
-                <option value="1">1 (never)</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5 (always)</option>
+                <option value=0>select an option</option>
+                <option value=1>1 (never)</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5 (always)</option>
             </select>
             <h3>Question 7</h3>
-            <h4>question</h4>
+            <h4>I tend to be enthusiastic about new things.</h4>
             <select name="options" id="q7">
-                <option value>select an option</option>
-                <option value="1">1 (never)</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5 (always)</option>
+                <option value=0>select an option</option>
+                <option value=1>1 (never)</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5 (always)</option>
             </select>
             <h3>Question 8</h3>
-            <h4>question</h4>
+            <h4>I can resist temptation easily.</h4>
             <select name="options" id="q8">
-                <option value>select an option</option>
-                <option value="1">1 (never)</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5 (always)</option>
+                <option value=0>select an option</option>
+                <option value=1>1 (never)</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5 (always)</option>
             </select>
             <h3>Question 9</h3>
-            <h4>question</h4>
+            <h4>I am able to talk to strangers when I go out in public.</h4>
             <select name="options" id="q9">
-                <option value>select an option</option>
-                <option value="1">1 (never)</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5 (always)</option>
+                <option value=0>select an option</option>
+                <option value=1>1 (never)</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5 (always)</option>
             </select>
             <h3>Question 10</h3>
-            <h4>question</h4>
+            <h4>I resist change.</h4>
             <select name="options" id="q10">
-                <option value>select an option</option>
-                <option value="1">1 (never)</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5 (always)</option>
-            </select> -->
+                <option value=0>select an option</option>
+                <option value=1>1 (never)</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+                <option value=5>5 (always)</option>
+            </select>
         </form>
-        <button onclick="submit()">Submit</button>
+        <button onclick='submitForm()'>Submit</button>
     </div>
 
 <div id="bestMatchModal" class="modal">
@@ -135,7 +137,71 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="../data/friend.js"></script>
+<script>
+    let isValid = true
+    const submitForm = () => {
+    isValid = true
+    event.preventDefault()
+    validateForm()
+    if (isValid) {
+        fetch('/survey', {
+            method: 'POST',
+            headers: { 'Content-type' : 'application/json; charset=utf-8'},
+            body: JSON.stringify ({
+                name: document.querySelector('#InputName').value,
+                photo: document.querySelector('#InputPhoto').value,
+                scores: [
+                    parseInt(document.querySelector('#q1').value), 
+                    parseInt(document.querySelector('#q2').value), 
+                    parseInt(document.querySelector('#q3').value),
+                    parseInt(document.querySelector('#q4').value),
+                    parseInt(document.querySelector('#q5').value),
+                    parseInt(document.querySelector('#q6').value),
+                    parseInt(document.querySelector('#q7').value),
+                    parseInt(document.querySelector('#q8').value),
+                    parseInt(document.querySelector('#q9').value),
+                    parseInt(document.querySelector('#q10').value)
+                ]
+            })
+        })
+        .then(
+            fetch('/survey')
+            .then(r => r.json())
+            .then(r => {
+                document.querySelector('.modal').style.display = "block"
+                document.querySelector('.modal').innerHTML = (`
+                    <div>
+                        <button onclick="closeModal()" class="close">&times;</button>
+                    </div>
+                    <h1 id="modal-title">Best Match</h1>
+                    <hr>
+                    <h2 id="match-name">${r[0].name}</h2>
+                    <img id="match-pic" src=${r[0].photo}>
+                    `)
+            })
+        )
+        .catch (e => console.error(e))
+    } else {
 
+    }
+}
+function validateForm() {
+    if (document.querySelector('#InputName').value === '') {
+        document.querySelector('#error-name').style.display = "block"
+        isValid = false
+    }
+    let survey_length = 10
+    for (let i=1; i < survey_length+1; i++) {
+        if (document.querySelector(`#q${i}`).value === '0') {
+            document.querySelector('#error-question').style.display = "block"
+            isValid = false
+        }
+    }
+}
+
+function closeModal() {
+    document.querySelector('.modal').style.display = "none"
+}
+</script>
 </body>
 </html>
