form validate scroll to top with error message

--- a/public/survey.html
+++ b/public/survey.html
@@ -197,6 +197,8 @@ function validateForm() {
             isValid = false
         }
     }
+    window.scrollTo(0,0)
+    // documentElement.scrollTop(0)
 }
 
 function closeModal() {
